# snake-game

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  README.md  conanfile.py  project_options.cmake  project_options.local.cmake.example  vcpkg.json
cmake/: MyLibConfig.cmake.in  analyzers.cmake  build_acceleration.cmake  clangd.cmake  compiler.cmake  config_conan.cmake  config_vcpkg.cmake  configure_target.cmake  coverage.cmake  format.cmake  package_manager.cmake  profiler.cmake  sanitizers.cmake  version.cmake  version.h.in
cmake/conan-profiles/: clang-cl-windows-asan.ini  clang-cl-windows-debug.ini  clang-cl-windows-release.ini
src/hello/: CMakeLists.txt  main.cpp
src/snake/: CMakeLists.txt  config.hpp  food.hpp  game.hpp  main.cpp  snake.hpp
test/: CMakeLists.txt  test_simple.cpp
